feat: add UserDetailsService